[gd_scene load_steps=2 format=3 uid="uid://cxa3oqeodrhgv"]

[ext_resource type="Script" path="res://scripts/spawners/enemy_spawner.gd" id="1_c628v"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_c628v")

[node name="EnemyHolder" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="SpawnTimer" to="." method="_spawn_enemy"]
